<resources>
    <string name="app_name">Vladivostok Attractions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Достопримечательности Владивостока</string>
    <string name="nav_header_subtitle">Найди место себе по душе</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_places">Что посмотреть</string>
    <string name="menu_museums">Музеи</string>
    <string name="menu_catering">Места общепита</string>
    <string name="menu_hotels">Отели</string>
    <string name="menu_swimming">Где искупаться</string>
    <string name="menu_rus_island">Русский остров</string>
    <string name="menu_entertainment">Развлечения</string>
    <string name="menu_advices">Советы</string>
    <string name="menu_hills">Смотровые площадки и сопки</string>
    <string name="menu_shopping">Торговые центры</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_bookmarks">Закладки</string>
    <string name="button_start">Start</string>
    <string name="tv_info">Дополнительную информацию можно посмотреть по ссылке:</string>
    <string name="activity_about_newFeatures">Изменения:\n\t
    -Добавлены карты с метками\n\t
        -Осуществлена стабильная подгрузка картинок\n\t
    -Устранены некоторые баги\n\t
    -Добавлены закладки
    -Добавлены адреса и дополнительные ссылки про объекты</string>
    <string name="hello_layout">\t Добро пожаловать в приложение. Оно представляет собой небольшую
        галерею с описанием некоторых достопремичательностей, мест, а также отелей Владивостока. \n\n
        В приложении осуществляется подргрузка картинок из интернет источников и кэшируется в памяти
        мобильного устройства, что в дальнейшем позволяет пользоваться приложением более комфортно.\n
    </string>
    <string name="add_dlt_bookmark">Добавить/удалить закладку</string>
    <string name="bookmarks_empty">У вас нет добавленных закладок</string>



</resources>